monitoring/jaeger/jaeger-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: monitoring
spec:
  hosts:
  - "jaeger.cloudjet.click"
  gateways:
  - user/cloudjet-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: jaeger-all-in-one.monitoring.svc.cluster.local
        port:
          number: 16686
    corsPolicy:
      allowOrigins:
      - exact: https://jaeger.cloudjet.click
      allowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      allowHeaders:
      - Authorization
      - Content-Type
      - X-Requested-With
      allowCredentials: true
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: jaeger-dr
  namespace: monitoring
spec:
  host: jaeger-all-in-one.monitoring.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
